--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,97 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
+    <ImageView
+        android:id="@+id/ImageView"
+        android:layout_width="398dp"
+        android:layout_height="400dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.461"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/back" />
+
+    <Button
+        android:id="@+id/btn7"
+        android:layout_width="123dp"
+        android:layout_height="124dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="6dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn4" />
+
+    <Button
+        android:id="@+id/btn8"
+        android:layout_width="123dp"
+        android:layout_height="124dp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btn7"
+        tools:layout_editor_absoluteX="144dp" />
+
+    <Button
+        android:id="@+id/btn9"
+        android:layout_width="123dp"
+        android:layout_height="124dp"
+        android:layout_marginEnd="14dp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btn8"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/btn5"
+        android:layout_width="123dp"
+        android:layout_height="124dp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btn4"
+        tools:layout_editor_absoluteX="144dp" />
+
+    <Button
+        android:id="@+id/btn6"
+        android:layout_width="123dp"
+        android:layout_height="124dp"
+        android:layout_marginEnd="14dp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btn5"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/btn4"
+        android:layout_width="123dp"
+        android:layout_height="124dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="6dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn1" />
+
+    <Button
+        android:id="@+id/btn1"
+        android:layout_width="123dp"
+        android:layout_height="124dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn2"
+        android:layout_width="123dp"
+        android:layout_height="124dp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btn1"
+        tools:layout_editor_absoluteX="144dp" />
+
+    <Button
+        android:id="@+id/btn3"
+        android:layout_width="123dp"
+        android:layout_height="124dp"
+        android:layout_marginEnd="14dp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btn2"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView21"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:layout_marginBottom="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:srcCompat="@drawable/empty" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
