--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,8 +30,11 @@
         android:id="@+id/btn8"
         android:layout_width="123dp"
         android:layout_height="124dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="1dp"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn7"
-        tools:layout_editor_absoluteX="144dp" />
+        app:layout_constraintEnd_toStartOf="@+id/btn9"
+        app:layout_constraintStart_toEndOf="@+id/btn7" />
 
     <Button
         android:id="@+id/btn9"
@@ -45,8 +48,11 @@
         android:id="@+id/btn5"
         android:layout_width="123dp"
         android:layout_height="124dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="1dp"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn4"
-        tools:layout_editor_absoluteX="144dp" />
+        app:layout_constraintEnd_toStartOf="@+id/btn6"
+        app:layout_constraintStart_toEndOf="@+id/btn4" />
 
     <Button
         android:id="@+id/btn6"
@@ -78,16 +84,20 @@
         android:id="@+id/btn2"
         android:layout_width="123dp"
         android:layout_height="124dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="1dp"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn1"
-        tools:layout_editor_absoluteX="144dp" />
+        app:layout_constraintEnd_toStartOf="@+id/btn3"
+        app:layout_constraintStart_toEndOf="@+id/btn1" />
 
     <Button
         android:id="@+id/btn3"
         android:layout_width="123dp"
         android:layout_height="124dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="14dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/btn2"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView21"
