--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,6 +77,7 @@
         android:layout_height="124dp"
         android:layout_marginStart="14dp"
         android:layout_marginTop="24dp"
+        app:icon="@drawable/empty"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
